--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head> 
-<link rel="" href="style.css" title="" type="" />
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
     </div>
 
-    <script src="script.js"></script>
+   <script src="script1.js"></script>
 </body>
 
 </html>
